--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -4,4 +4,11 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "firecrawl-py>=4.4.0",
+    "langchain>=0.3.27",
+    "langchain-openai>=0.3.35",
+    "langgraph>=0.6.10",
+    "pydantic>=2.12.2",
+    "python-dotenv>=1.1.1",
+]
