--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,10 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "fastapi>=0.119.0",
     "firecrawl-py>=4.4.0",
     "langchain>=0.3.27",
     "langchain-openai>=0.3.35",
     "langgraph>=0.6.10",
     "pydantic>=2.12.2",
     "python-dotenv>=1.1.1",
+    "uvicorn>=0.37.0",
 ]
